[package]
name = "pg"
version = "0.1.0"
authors = ["Aaron Michal <amichal@greenriver.org>"]
readme  = "README.md"

[[bin]]
name = "pg"
doc = true

[dependencies]
iron = "*"
persistent="*"
r2d2 = "0.6.2"
r2d2_postgres = "0.10.0"
postgres = "0.11"

[dependencies.logger]
git = "https://github.com/iron/logger.git"
